[package]
name = "net_packet"
version = "1.0.0"
authors = ["nneesshh <neckshotk@gmail.com>"]
description = "Thread safe memory pool for net io buffer"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
lazy_static = "1"
bytes = "1"
parking_lot = "*"
opool = { path = "opool" }

#[dev-dependencies]


[build-dependencies]
dunce = "1"
miette = { version = "5", features = ["fancy"] } # optional but gives nicer error messages!